--- a/Mini Project 4/Jason's Code copy.ipynb
+++ b/Mini Project 4/Jason's Code copy.ipynb
@@ -125,25 +125,9 @@
    ],
    "source": [
     "tweet_data = pd.read_csv(\"sentimenttweets.csv\")\n",
-    "'''\n",
-    "# tweet_data = pd.concat([pd.read_excel(os.path.join(\"twitterdata\", f), index_col = 0) for f in os.listdir(\"twitterdata\")])\n",
-    "\n",
-    "tweet_data = pd.read_csv(\"searchTweets.csv\")\n",
-    "\n",
-    "tweet_data = tweet_data[[\"ticker\", \"created\", \"sent_score\"]]\n",
-    "\n",
-    "tweet_data2 = tweet_data2[[\"ticker\", \"created\", \"sent_score\"]]\n",
-    "\n",
-    "tweet_data = pd.concat([tweet_data, tweet_data2], axis = 0)\n",
-    "\n",
-    "tweet_data.shape\n",
-    "\n",
-    "'''\n",
     "print(tweet_data.head())\n",
     "\n",
-    "\n",
     "returns_data = pd.read_csv(\"stocks.csv\")\n",
-    "\n",
     "returns_data.head()\n"
    ]
   },
@@ -554,6 +538,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -798,143 +796,6 @@
    "source": [
     "mean_squared_error(y_test, y_pred)\n",
     "np.sqrt(mean_squared_error(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "import random\n",
-    "\n",
-    "random.seed(0)\n",
-    "\n",
-    "train_tickers = list(random.sample(list(dt.index.get_level_values(0).unique()), 400))\n",
-    "test_tickers = [x for x in dt.index.get_level_values(0).unique() if x not in train_tickers]\n",
-    "\n",
-    "import numpy as np \n",
-    "\n",
-    "X_train = np.array([features[features.index.get_level_values(0) == ticker].values.tolist() for ticker in train_tickers])\n",
-    "y_train = np.array([target[target.index.get_level_values(0) == ticker].values.tolist() for ticker in train_tickers])\n",
-    "\n",
-    "X_test = np.array([features[features.index.get_level_values(0) == ticker].values.tolist() for ticker in test_tickers])\n",
-    "y_test = np.array([target[target.index.get_level_values(0) == ticker].values.tolist() for ticker in test_tickers])\n",
-    "\n",
-    "X_test[1]\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout, LSTM\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(LSTM(units = 10, return_sequences = True, input_shape = (X_train.shape[1], X_train.shape[2])))\n",
-    "model.add(LSTM(units = 5))\n",
-    "model.add(Dense(units = 1))\n",
-    "\n",
-    "early_stop = EarlyStopping(monitor='loss', patience=10, verbose=1)\n",
-    "\n",
-    "model.compile(optimizer = \"adam\", loss = \"mean_squared_error\")\n",
-    "\n",
-    "model.fit(X_train, y_train, epochs = 50, batch_size = 30, callbacks=[early_stop])\n",
-    "\n",
-    "model.summary()\n",
-    "\n",
-    "y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "y_test_pred\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.scatter(y_test, y_test_pred)\n",
-    "plt.show()\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
-    "\n",
-    "preds = pd.DataFrame({\"Predicted\": y_test_pred.flatten(), \"Actual\": y_test.flatten()})\n",
-    "preds.plot()\n",
-    "\n",
-    "results = pd.DataFrame({\"Predicted\": y_test_pred.flatten(), \"Actual\": y_test.flatten()}, index = test_tickers)\n",
-    "\n",
-    "results.head()\n",
-    "\n",
-    "t_0 = features[features.index.get_level_values(1) == '11/25/2020'][[\"return\", \"sent_score\"]].reset_index(level = 1)\n",
-    "\n",
-    "res = results.merge(t_0, how = \"left\", left_index = True, right_index = True)\n",
-    "\n",
-    "res.rename(columns = {\"return\": \"t-1\"}, inplace = True)\n",
-    "res.drop(columns = [\"date\"], inplace = True)\n",
-    "\n",
-    "res.head()\n",
-    "\n",
-    "ups = res[res[\"Predicted\"] > res[\"t-1\"]]\n",
-    "\n",
-    "downs = res[res[\"Predicted\"] < res[\"t-1\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "print(\"Ups: {} Downs: {}\".format(ups.shape[0], downs.shape[0]))\n",
-    "\n",
-    "print(\"Out of {} predicted ups, {} actually went up\".format(ups.shape[0], res[(res[\"Predicted\"] > res[\"t-1\"]) & (res[\"Actual\"] > res[\"t-1\"])].shape[0]))\n",
-    "\n",
-    "print(\"Out of {} predicted downs, {} actually went down\".format(downs.shape[0], res[(res[\"Predicted\"] < res[\"t-1\"]) & (res[\"Actual\"] < res[\"t-1\"])].shape[0]))\n",
-    "\n",
-    "abs_up_ret = (ups[\"Actual\"] - ups[\"t-1\"]).sum()\n",
-    "print(\"If we bought equally-weighted shares of each predicted up, we would have made: {:.2f}\".format(abs_up_ret))\n",
-    "print(\"Of a total investment of {:.2f}, that's a 1-day return of {:.2f}%\".format(ups[\"t-1\"].sum(), abs_up_ret / ups[\"t-1\"].sum() * 100))\n",
-    "print(\"Annualized, that figure is {:.2f}%\".format((np.power(1 + abs_up_ret / ups[\"t-1\"].sum(), 251) - 1) * 100))\n",
-    "\n",
-    "abs_down_ret = (downs[\"t-1\"] - downs[\"Actual\"]).sum()\n",
-    "print(\"If we shorted equally-weighted shares of each predicted down, we would have made: {:.2f}\".format(abs_down_ret))\n",
-    "print(\"Of a total investment of {:.2f} (@150% margin), that's a 1-day return of {:.2f}%\".format(downs[\"t-1\"].sum() * 1.5, abs_down_ret / (downs[\"t-1\"].sum() * 1.5) * 100))\n",
-    "print(\"Annualized, that figure is {:.2f}%\".format((np.power(1 + abs_down_ret / (downs[\"t-1\"].sum() * 1.5), 251) - 1) * 100))\n",
-    "\n",
-    "# Impact of sentiment on performance\n",
-    "\n",
-    "top_sent = res.nlargest(20, columns = \"sent_score\")\n",
-    "low_sent = res.nsmallest(20, columns = \"sent_score\")\n",
-    "\n",
-    "print(\"Of 20 companies with highest sentiment at t-1, {} went up, {} went down\".format(top_sent[top_sent[\"Actual\"] > top_sent[\"t-1\"]].shape[0], top_sent[top_sent[\"Actual\"] < top_sent[\"t-1\"]].shape[0]))\n",
-    "\n",
-    "print(\"Equal-weighted price return (long highest sentiment companies): {:.2f}\".format((top_sent[\"Actual\"] - top_sent[\"t-1\"]).sum()))\n",
-    "\n",
-    "print(\"Of 20 companies with lowest sentiment at t-1, {} went up, {} went down\".format(low_sent[low_sent[\"Actual\"] > low_sent[\"t-1\"]].shape[0], low_sent[low_sent[\"Actual\"] < low_sent[\"t-1\"]].shape[0]))\n",
-    "\n",
-    "print(\"Equal-weighted price return (short lowest sentiment companies): {:.2f}\".format((low_sent[\"t-1\"] - low_sent[\"Actual\"]).sum()))\n",
-    "\n",
-    "tr = (top_sent[\"Actual\"] - top_sent[\"t-1\"]).sum() + (low_sent[\"t-1\"] - low_sent[\"Actual\"]).sum()\n",
-    "print(\"Strategy: Long Top 20 Sentiment, Short Worst 20 Sentiment\")\n",
-    "print(\"Net price return: {:.2f}\".format(tr))\n",
-    "print(\"Net 1-day : {:.2f}%\\nAnnualized: {:.2f}%\".format(100 * tr / (top_sent[\"t-1\"].sum() + 1.5 * low_sent[\"t-1\"].sum()), (np.power(1 + tr / (top_sent[\"t-1\"].sum() + 1.5 * low_sent[\"t-1\"].sum()), 251) - 1) * 100))\n"
    ]
   },
   {
