--- a/Mini Project 4/Jason's Code copy.ipynb
+++ b/Mini Project 4/Jason's Code copy.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -595,24 +595,24 @@
      "text": [
       "                     id  polarity1  subjectivity1  polarity2  subjectivity2  \\\n",
       "sentiment                                                                     \n",
-      "positive   1.510000e+18   0.522873       0.320462   0.519823       0.316083   \n",
+      "positive   1.510000e+18   0.603101       0.330359   0.600006       0.326311   \n",
       "\n",
       "             change     volume  \n",
       "sentiment                       \n",
-      "positive  -0.017812  2891966.0  \n",
+      "positive  -0.013636  2030148.0  \n",
       "                     id  polarity1  subjectivity1  polarity2  subjectivity2  \\\n",
       "sentiment                                                                     \n",
-      "negative   1.510000e+18   -0.11448       0.250516  -0.124945       0.248111   \n",
+      "negative   1.510000e+18  -0.178519        0.24463  -0.178519        0.24463   \n",
       "\n",
-      "             change     volume  \n",
-      "sentiment                       \n",
-      "negative  -0.020924  1684520.0  \n"
+      "            change    volume  \n",
+      "sentiment                     \n",
+      "negative  -0.01905  925640.0  \n"
      ]
     }
    ],
    "source": [
-    "neg_data = pd_data.sort_values('polarity2').head(20)\n",
-    "pos_data = pd_data.sort_values('polarity2').tail(20)\n",
+    "neg_data = pd_data.sort_values('polarity2').head(10)\n",
+    "pos_data = pd_data.sort_values('polarity2').tail(10)\n",
     "print(pos_data.groupby(['sentiment']).mean())\n",
     "print(neg_data.groupby(['sentiment']).mean())"
    ]
@@ -892,29 +892,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.03976082, -0.02429768, -0.04043783, -0.01542017, -0.00801756,\n",
-       "       -0.0230211 , -0.04304937, -0.00740905, -0.02887326, -0.01750323,\n",
-       "        0.00770928,  0.00812422, -0.0183904 , -0.01714305, -0.00763439,\n",
-       "       -0.00760416, -0.02544727, -0.02902161,  0.00887117, -0.01282362,\n",
-       "       -0.03735695, -0.02579864, -0.00047562, -0.02805045, -0.02512047,\n",
-       "       -0.03351454, -0.01642493, -0.00268606, -0.00484833, -0.00443878,\n",
-       "       -0.03418323, -0.03390107, -0.01778632,  0.00682854, -0.03546924,\n",
-       "       -0.02352301, -0.00823152, -0.01490271,  0.00217704, -0.02866033,\n",
-       "       -0.03240992, -0.01257416, -0.00287299, -0.02341865,  0.0129575 ,\n",
-       "       -0.01474576, -0.00627404, -0.01322694, -0.01904521, -0.01338967,\n",
-       "       -0.02909354,  0.02055572, -0.05004654, -0.02936637, -0.01399923,\n",
-       "       -0.0113201 , -0.00593868, -0.02165861, -0.00149055, -0.03191602,\n",
-       "       -0.0112991 , -0.04909048, -0.00395524, -0.04011292, -0.00914836,\n",
-       "       -0.03522706])"
+       "array([-3.65351234e-02, -2.37857555e-02, -4.31450405e-02, -2.16595216e-02,\n",
+       "       -1.03337298e-02, -1.96765206e-02, -3.86720623e-02, -5.12557995e-03,\n",
+       "       -2.33994531e-02, -2.09665384e-02,  6.44838296e-03,  2.70964233e-03,\n",
+       "       -1.68697497e-02, -1.49161344e-02, -1.18639288e-02, -7.32503072e-03,\n",
+       "       -2.79995999e-02, -3.59349236e-02,  1.06107132e-02, -1.24500641e-02,\n",
+       "       -4.03471876e-02, -2.62766692e-02,  3.55452734e-03, -2.88474003e-02,\n",
+       "       -2.39465841e-02, -3.20471869e-02, -1.91992329e-02, -6.12772549e-03,\n",
+       "       -4.91053751e-03, -1.94463660e-03, -3.81297084e-02, -3.54092670e-02,\n",
+       "       -1.90188992e-02,  5.89239141e-03, -3.26312546e-02, -3.11253822e-02,\n",
+       "       -8.94941565e-03, -9.64784899e-03, -8.07828100e-05, -2.97068253e-02,\n",
+       "       -3.83404040e-02, -1.40067008e-02, -3.41914968e-03, -2.62925018e-02,\n",
+       "        1.30725574e-02, -7.82579482e-03, -9.20088285e-03, -1.47855356e-02,\n",
+       "       -1.57754796e-02, -1.75957135e-02, -3.71697432e-02,  2.05716288e-02,\n",
+       "       -4.54584429e-02, -3.54858613e-02, -8.87937561e-03, -1.10505201e-02,\n",
+       "       -8.30723057e-03, -1.97785907e-02,  9.03312510e-04, -3.30054163e-02,\n",
+       "       -9.85338850e-03, -4.59307172e-02, -1.00289624e-03, -4.32844289e-02,\n",
+       "       -9.66575879e-03, -3.59690183e-02])"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,16 +932,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03293422381168542"
+       "0.03281091754680922"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,6 +949,27 @@
    "source": [
     "mean_squared_error(y_test, y_pred)\n",
     "np.sqrt(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.14465109520136243"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2 = r2_score(y_test, y_pred)\n",
+    "r2"
    ]
   },
   {
