--- a/Mini Project 4/Mini Project Code.ipynb
+++ b/Mini Project 4/Mini Project Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4   ABMD -0.017808   265680.0"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "377"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "0.03168971768928703"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "[327 rows x 8 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,14 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-209-6b05766f9d27>:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "<ipython-input-6-6b05766f9d27>:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  pd_data.mean()\n"
      ]
     },
@@ -403,7 +403,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "positive  -0.019875  5.684443e+06  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "42"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_predictions(actual, predict):\n",
+    "    over = 0\n",
+    "    over_num = 0\n",
+    "    under = 0\n",
+    "    under_num = 0\n",
+    "    correct = 0\n",
+    "    for i in range(len(actual)):\n",
+    "        if actual[i] > predict[i]:\n",
+    "            under += 1\n",
+    "            under_num += abs(actual[i] - predict[i])\n",
+    "        elif actual[i] < predict[i]:\n",
+    "            over += 1\n",
+    "            over_num += abs(actual[i] - predict[i])\n",
+    "        else:\n",
+    "            correct += 1\n",
+    "    over_avg = over_num / over\n",
+    "    under_avg = under_num / under\n",
+    "    return (over, over_num, over_avg, under, under_num, under_avg, correct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def over_under(actual, pred):\n",
+    "    right_neg = 0\n",
+    "    wrong_neg = 0\n",
+    "    right_pos = 0\n",
+    "    wrong_pos = 0\n",
+    "    for i in range(len(actual)):\n",
+    "        if pred[i] < 0 and actual[i] < 0:\n",
+    "            right_neg += 1\n",
+    "        elif pred[i] < 0 and actual[i] > 0:\n",
+    "            wrong_neg += 1\n",
+    "        elif pred[i] > 0 and actual[i] > 0:\n",
+    "            right_pos += 1\n",
+    "        else:\n",
+    "            wrong_pos += 1\n",
+    "            \n",
+    "    return (right_neg, wrong_neg, right_pos, wrong_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +843,7 @@
        "0.03115101383583874"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,6 +851,120 @@
    "source": [
     "std_target = target.std()\n",
     "std_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n",
+      "66\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(prediction))\n",
+    "y_test_list = list(y_test)\n",
+    "print(len(y_test_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "0.8481519595523633\n",
+      "0.025701574531889797\n",
+      "33\n",
+      "0.7620148563004941\n",
+      "0.023091359281833156\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = get_predictions(y_test_list, prediction)\n",
+    "for pred in preds:\n",
+    "    print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "327\n",
+      "327\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(y_pred))\n",
+    "y_test_list = list(target)\n",
+    "print(len(y_test_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "148\n",
+      "3.855980148964958\n",
+      "0.026053919925438904\n",
+      "179\n",
+      "3.8619187834358324\n",
+      "0.021574965270591242\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = get_predictions(y_test_list, y_pred)\n",
+    "for pred in preds:\n",
+    "    print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "right negative: 240\n",
+      "wrong negative: 86\n",
+      "right positive: 0\n",
+      "wrong positive: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes = over_under(y_test_list, y_pred)\n",
+    "print('right negative:', outcomes[0])\n",
+    "print('wrong negative:', outcomes[1])\n",
+    "print('right positive:', outcomes[2])\n",
+    "print('wrong positive:', outcomes[3])"
    ]
   },
   {
@@ -812,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +1018,7 @@
        "Text(0, 0.5, 'Mean Squared Error')"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -892,32 +1056,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-3.65351234e-02, -2.37857555e-02, -4.31450405e-02, -2.16595216e-02,\n",
-       "       -1.03337298e-02, -1.96765206e-02, -3.86720623e-02, -5.12557995e-03,\n",
-       "       -2.33994531e-02, -2.09665384e-02,  6.44838296e-03,  2.70964233e-03,\n",
-       "       -1.68697497e-02, -1.49161344e-02, -1.18639288e-02, -7.32503072e-03,\n",
-       "       -2.79995999e-02, -3.59349236e-02,  1.06107132e-02, -1.24500641e-02,\n",
-       "       -4.03471876e-02, -2.62766692e-02,  3.55452734e-03, -2.88474003e-02,\n",
-       "       -2.39465841e-02, -3.20471869e-02, -1.91992329e-02, -6.12772549e-03,\n",
-       "       -4.91053751e-03, -1.94463660e-03, -3.81297084e-02, -3.54092670e-02,\n",
-       "       -1.90188992e-02,  5.89239141e-03, -3.26312546e-02, -3.11253822e-02,\n",
-       "       -8.94941565e-03, -9.64784899e-03, -8.07828100e-05, -2.97068253e-02,\n",
-       "       -3.83404040e-02, -1.40067008e-02, -3.41914968e-03, -2.62925018e-02,\n",
-       "        1.30725574e-02, -7.82579482e-03, -9.20088285e-03, -1.47855356e-02,\n",
-       "       -1.57754796e-02, -1.75957135e-02, -3.71697432e-02,  2.05716288e-02,\n",
-       "       -4.54584429e-02, -3.54858613e-02, -8.87937561e-03, -1.10505201e-02,\n",
-       "       -8.30723057e-03, -1.97785907e-02,  9.03312510e-04, -3.30054163e-02,\n",
-       "       -9.85338850e-03, -4.59307172e-02, -1.00289624e-03, -4.32844289e-02,\n",
-       "       -9.66575879e-03, -3.59690183e-02])"
+       "array([-3.72017996e-02, -2.48440215e-02, -4.14461879e-02, -1.99075404e-02,\n",
+       "       -6.81826831e-03, -1.85101682e-02, -4.16477172e-02, -5.48990563e-03,\n",
+       "       -2.19164140e-02, -1.64164997e-02,  2.44654474e-02,  3.82387060e-03,\n",
+       "       -1.75250008e-02, -1.26218051e-02, -1.24618904e-02, -7.36535184e-03,\n",
+       "       -2.00764967e-02, -3.55672793e-02,  9.80229445e-03, -1.42521108e-02,\n",
+       "       -3.78861514e-02, -2.58143817e-02, -2.90687300e-05, -2.21417504e-02,\n",
+       "       -2.82268970e-02, -2.89930925e-02, -1.75310565e-02, -4.41298420e-03,\n",
+       "       -4.06688091e-03, -5.18021477e-03, -4.12013741e-02, -3.78981592e-02,\n",
+       "       -2.39078021e-02,  2.81749921e-03, -3.64037012e-02, -2.75642217e-02,\n",
+       "       -8.64030351e-03, -1.55407095e-02, -4.95558030e-04, -3.28885873e-02,\n",
+       "       -3.47157314e-02, -1.38575633e-02, -7.24537636e-03, -2.75080086e-02,\n",
+       "        2.97239082e-02, -1.01066824e-02, -3.81158827e-03, -1.65065359e-02,\n",
+       "       -1.66644415e-02, -2.11728565e-02, -2.87326501e-02,  2.19971497e-02,\n",
+       "       -5.46789698e-02, -3.51262064e-02, -8.72885352e-03, -1.25536181e-02,\n",
+       "       -9.07514502e-03, -2.24653307e-02, -2.20316188e-03, -2.90571391e-02,\n",
+       "       -1.22736712e-02, -4.79758629e-02, -3.19710030e-03, -4.95879425e-02,\n",
+       "       -9.91958531e-03, -2.23320785e-02])"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,16 +1096,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03281091754680922"
+       "0.03272973865510573"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,16 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.14465109520136243"
+       "-0.13899404177520536"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
